# bw-engine

./: .gitignore  Cargo.toml  README.ko.md  README.md
.github/workflows/: ci.yml
crates/bw-engine/: Cargo.toml
crates/bw-engine/benches/: simulation.rs
crates/bw-engine/src/: chk_units.rs  dat.rs  direction.rs  error.rs  fp8.rs  game.rs  grp.rs  lib.rs  mpq.rs  scx.rs  selection.rs  tbl.rs  tileset.rs  unit.rs
crates/bw-engine/tests/: real_data.rs  replay_sim.rs
crates/replay-core/: Cargo.toml
crates/replay-core/benches/: parsing.rs
crates/replay-core/src/: analysis.rs  command.rs  error.rs  format.rs  gamedata.rs  header.rs  lib.rs  phases.rs  section.rs  skill.rs  stats.rs  timeline.rs
crates/replay-core/tests/: integration.rs
crates/replay-nif/: Cargo.toml
crates/replay-nif/src/: lib.rs
crates/replay-wasm/: Cargo.toml
crates/replay-wasm/src/: lib.rs
demo/: index.html
docs/: api-reference.md  getting-started.md
